[package]
name = "david_mod"
version = "0.1.0"
edition = "2021"

[lib]
name = "david_mod"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.2"
lazy_static = "1.4.0"
arcropolis-api = "0.1.0"
nro-hook = "0.1.0"
smash = { git = "https://github.com/ultimate-research/smash-rs.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
