[package]
name = "david_mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove smash, smashline, skyline, and arcropolis-api dependencies
lazy_static = "1.4.0"
nalgebra = "0.32.2"

# Add Unreal Engine 4 related dependencies (these are placeholder names, actual dependencies may vary)
unreal_engine = { git = "https://github.com/EpicGames/UnrealEngine.git", branch = "4.27" }
ue4_modding_framework = { git = "https://github.com/example/ue4_modding_framework.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
